share/css/backoffice.css
/* ... */
@media all and (max-width: 600px) {
    div#jGrowl { width: 80%; left: 10%; margin-left: 0; }
}

/*
* Tracy
*/
  
#tracy-debug {z-index: 300000;}
#tracy-debug img {width: auto;}
@media all and (max-width: 600px) {
    #tracy-debug {display: none!important;}
}




/*
* Backoffice layout
*/

#backoffice {
  height: 100%;
  width: auto; 
  margin: 0 auto;

  .page-content-wrapper, 
  .page-header-wrapper {
    padding-left: 0; margin-left: 0;
  }
}

#onyx-backoffice {
  margin-left: 130px; 
  height: 100%; 
  width: calc(100% - 130px);
}

div.wrapper {
  margin: 0 10px;
}

.bo-page {
  display: flex;
  position: relative;
  width: 100%;
  height: 100%;
}

.bo-navigation-wrapper {
  display: flex;
  flex-direction: column;
  position: relative;
  width: auto;
  max-width: 50%;
  height: 100%;
  transition: 0.3s ease;
}

.bo-node-detail-wrapper {
  height: 100%;
  width: 100%;
  min-width: 50%;
  padding: 0 10px;
  border-left: 2px solid var(--onyx-color-primary);
  position: relative;
}

/*
* onyxHeader
*/
 
#onyx-header { position: fixed; z-index: 3000; left: 0; top: 0; width: 130px; height: 100%; background: #2a2f34; box-shadow: inset -3px 0 15px rgba(0,0,0,0.2), 1px 0 3px rgba(0,0,0,0.2); overflow: hidden;}
#onyx-header a { line-height: 17px; font-family: "Lucida Grande", Helvetica, Arial, sans-serif;  color: #ccc;}

#onyx-menu-bar ul { margin: 0; padding: 10px 0; list-style: none; text-shadow: 1px 1px 1px rgba(0,0,0,0.5); border-top: 1px solid #33373c; box-shadow: 0 -1px 0 #0f1112; }
#onyx-menu-bar ul li { margin: 0; padding: 0; width: 130px; white-space: nowrap;}
#onyx-menu-bar ul li a { text-decoration: none; display: flex; width: 130px; height: 28px; line-height: 24px; transition: color 200ms linear; align-items: center; }
#onyx-menu-bar ul li.active a { color: #fff; margin-top: 0; border-top: 1px solid #6d97d0; background-image: -webkit-linear-gradient(top, #5685c4, #4c6cb8); background-image: -moz-linear-gradient(top, #5685c4, #4c6cb8); background-image: -ms-linear-gradient(top, #5685c4, #4c6cb8); background-image: -o-linear-gradient(top, #5685c4, #4c6cb8); background-image: linear-gradient(to bottom, #5685c4, #4c6cb8); }
#onyx-menu-bar ul li a:hover { color: #fff !important; }

#onyx-menu-bar ul#menu-system { padding: 10px 0 13px 0; }
#menu-system li.onyx-version a {color: white; height: auto; line-height: 1.2;}
div.backoffice-menu { position: relative; }
ul#menu-advanced { position: absolute; top: 0; left: 130px; }

/*
* fe edit
*/
 
div.onyx-highlight-delete {background: #ffbfbf;}
div.onyx-highlight-edit {background: #bfffbf;}

/*
* Display permission highlights
*/
 
div.node.show-at-normal-login {border: 1px solid red;}
div.node.hide-at-normal-login {border: 1px solid green;}
div.node.show-at-trade-login {border: 1px solid red;}
div.node.hide-at-trade-login {border: 1px solid green;}

/*
* Product variety list
*/
 
a.button.add-new-variety {float: left; margin-right: 10px;}

/*
* divider
*/
 
div.divider {border-top: 2px solid #dadada;}

/*
* jQuery UI
*/
 
div.ui-dialog legend {display: none;}
.ui-widget-overlay {background: #000; opacity: 0.7; /*needs to be higher than .onyx-modal-overlay*/}

.ui-tabs-hide { display: none; }

.ui-slider .ui-slider-handle {width: 2.1em; height: 2.1em; top: -0.7em; margin-left: -0.7em; border-radius: 100px;}

/*
* popup window
*/
 
div.popup {height: 100%; padding: 10px; background: white; color: black; overflow-y: auto;}
h2 a,
h3 a,
h4 a {color: black;}

/*
* Image file list
*/
 
div.file-list-icon div.item a.image {display: block; max-height: 120px; overflow: hidden; margin-bottom: 1em;}

/*
* product list table
*/

div.product-list th.price,
div.product-list th.sku {text-align: center;}
div.product-list tbody tr.even td { background: #f0f0f0;}
div.product-list tbody tr.odd td { background: #fcfcfc;}

/* 
* combobox 
*/

.custom-combobox { position: relative; display: inline-block; margin-left: 5px; vertical-align: middle; }
.custom-combobox-toggle { position: absolute; top: 0; bottom: 5px; margin-left: -25px; padding: 0; }
.custom-combobox-input { margin: 0; padding: 6px 40px 6px 4px;  width: 400px; }
.ui-autocomplete { max-height: 206px; overflow-y: auto; overflow-x: hidden; }
.ui-autocomplete a { vertical-align: top; }
.ui-autocomplete .disabled, 
.ui-autocomplete .notpublic { color: #bbb; text-decoration: line-through; }
.ui-autocomplete .disabled img, 
.ui-autocomplete .notpublic img { opacity: 0.2; }

/*
* Page layout
*/

.invisible { opacity: 0; transition: all 400ms ease; -webkit-transform: translateX(-10px); transform: translateX(-10px); }
.visible.visible { opacity: 1; -webkit-transform: translateX(0); transform: translateX(0);}

div.two-column-page { padding: 0 20px; margin: 0; width: 100%; height: 100%; overflow-y: auto;}
div.two-column-page div.two-column-page { padding: 0; margin: 0;}


div.popup div.row-bottom div.row-wrapper { margin: 0; }
div.page-header { height: 50px; border-bottom: 1px solid #e0e0e0; margin: 0 0 10px 0; }
div.page-header h1 { font-size: 30px; }
div.horizontal-filter { border-bottom: 1px solid #e0e0e0; margin: 0 0 20px 0; height: 64px;}
div.horizontal-filter form { margin: 0; }
div.horizontal-filter fieldset { margin: 0; float: left; padding: 0; background: #ffffff;}
div.horizontal-filter select { max-width: 200px; }
div.horizontal-filter div.row { float: left; clear: none; margin: 0 20px 0 0; }
div.horizontal-filter div.row input { float: left; clear: none; margin: 0 5px 0 0;}



#pages-node-menu { overflow-x: auto; }


  /*default, fobinaci-1-1, 50%/50%*/
  div.two-column-page div.column-one,
  div.two-column-page.fibonacci-1-1 div.column-one {float: left; width: 49.999%; clear: both; overflow: hidden; }
  div.two-column-page div.column-two,
  div.two-column-page.fibonacci-1-1 div.column-two {width: 49.999%; float: right; overflow: hidden;}
  /*fibonacci-1-5, 16.6%/83.3%*/
  div.two-column-page.fibonacci-1-5 div.column-one {width: 16.66%;}
/* ... */

